==2011-02==
* Implemented system events. Each devices registers itself. An emulation gets these events and delegates them.
* Implemented shader center lighting 
* Fixed Document initialization problem
* Implemented monochrome shader decoder
* Implemented RGB decoder
* Improved canvas configuration
* Optimized shader

==2011-01==
* Fixed shader white IRE level
* Added shader scanlines
* Fixed vertical and horizontal centers
* Moved barrel center from content center to canvas center
* Implemented shader brightness clear color
* Implemented OpenGL 2.0 shader
* Fixed OpenGL context problem when closing an emulation.
* Implemented frame communication to the canvas
* Improved emulation window sizing
* Fixed race condition with display link and closing documents
* Implemented windowForSheet in Document
* Implemented [Document updateChangeCount]
* Implemented interface to signal an active emulation
* Implemented OEImage for easily reading PNG files
* Fixed display link/emulation/UI thread synchronization
* Implemented character palette
* Implemented disabling Mac OS X global keys. When installing or running, this should be executed:
sudo touch /private/var/db/.AccessibilityAPIEnabled
* Implemented keyboard fix for mapping the HELP key as the INSERT key.
* Implemented keyboard capture in CanvasView. The emulation syncs to the CAPS LOCK state of the host. This is done by sending fake CAPS LOCK messages. NUM LOCK and SCROLL LOCK are not addressed in the Cocoa port.
* Implemented UI pointer proximity, mouseEntered, mouseExited
* Fixed mouse capture so it is correctly handled when mouse capture mode is changed
* Implemented mouse and keyboard capture
* Fixed document window controller problem
* Implemented canvas drag and drop
* Implemented show device action in emulation menu
* Implemented canvas keyboard entry/mouse events
* Implemented copy/paste
* Implemented addCanvas and removeCanvas
* Fixed full-screen problem when pressing CMD-W