@@ -59,9 +59,10 @@ typedef enum
 {
 	CANVAS_DECODER_MONOCHROME,
 	CANVAS_DECODER_RGB,
-	CANVAS_DECODER_YUV,
-	CANVAS_DECODER_YIQ,
-	CANVAS_DECODER_CXA2025AS,
+	CANVAS_DECODER_NTSC_YIQ,
+	CANVAS_DECODER_NTSC_CXA2025AS,
+	CANVAS_DECODER_NTSC_YUV,
+	CANVAS_DECODER_PAL,
 } CanvasDecoder;
 
 typedef struct
