@@ -1,0 +1,63 @@
+
+/**
+ * libemulation
+ * System event interface
+ * (C) 2011 by Marc S. Ressl (mressl@umich.edu)
+ * Released under the GPL
+ *
+ * Defines the system event interface.
+ */
+
+#ifndef _SYSTEMEVENTINTERFACE_H
+#define _SYSTEMEVENTINTERFACE_H
+
+typedef enum
+{
+	SYSTEMEVENT_SEND,
+} SystemEventMessage;
+
+typedef enum
+{
+	SYSTEMEVENT_POWERDOWN = 0x81,
+	SYSTEMEVENT_SLEEP,
+	SYSTEMEVENT_WAKEUP,
+	SYSTEMEVENT_CONTEXT,
+	SYSTEMEVENT_MAINMENU,
+	SYSTEMEVENT_APPMENU,
+	SYSTEMEVENT_MENUHELP,
+	SYSTEMEVENT_MENUEXIT,
+	SYSTEMEVENT_MENUSELECT,
+	SYSTEMEVENT_MENURIGHT,
+	SYSTEMEVENT_MENULEFT,
+	SYSTEMEVENT_MENUUP,
+	SYSTEMEVENT_MENUDOWN,
+	SYSTEMEVENT_COLDRESTART,
+	SYSTEMEVENT_WARMRESTART,
+	SYSTEMEVENT_DPADUP,
+	SYSTEMEVENT_DPADDOWN,
+	SYSTEMEVENT_DPADRIGHT,
+	SYSTEMEVENT_DPADLEFT,
+	
+	SYSTEMEVENT_DOCK = 0xa0,
+	SYSTEMEVENT_UNDOCK,
+	SYSTEMEVENT_SETUP,
+	SYSTEMEVENT_BREAK,
+	SYSTEMEVENT_DEBUGGERBREAK,
+	SYSTEMEVENT_APPLICATIONBREAK,
+	SYSTEMEVENT_APPLICATIONDEBUGGERBREAK,
+	SYSTEMEVENT_SPEAKERMUTE,
+	SYSTEMEVENT_HIBERNATE,
+	
+	SYSTEMEVENT_DISPLAYINVERT = 0xb0,
+	SYSTEMEVENT_DISPLAYINTERNAL,
+	SYSTEMEVENT_DISPLAYEXTERNAL,
+	SYSTEMEVENT_DISPLAYBOTH,
+	SYSTEMEVENT_DISPLAYDUAL,
+	SYSTEMEVENT_DISPLAYTOGGLEINTEXT,
+	SYSTEMEVENT_DISPLAYSWAPPRIMARYSECONDARY,
+	SYSTEMEVENT_DISPLAYLCDAUTOSCALE,
+	
+	SYSTEMEVENT_END,
+} SystemEventUsageIds;
+
+#endif
